# vienna

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
src/agents/: __init__.py  base_agent.py  github_agent.py  gmail_agent.py
src/auth/: __init__.py  credential_store.py  oauth_manager.py
src/cli/: __init__.py  terminal.py
src/config/: __init__.py  agent_registry.py  agent_registry.yaml  settings.py
src/core/: __init__.py  context_manager.py  execution_engine.py  intent_parser.py
src/database/: __init__.py  models.py  mongodb_client.py
